fix: bug and other